add low latency configuration, 2s delay for docker containers

--- a/srs/srs.conf
+++ b/srs/srs.conf
@@ -8,6 +8,14 @@ ff_log_dir /data/log/ffmpeg;
 
 vhost __defaultVhost__
 {
+    gop_cache       off;
+    queue_length    10;
+    min_latency     on;
+    mr {
+        enabled     off;
+    }
+    mw_latency      100;
+    tcp_nodelay     on;
     hls
     {
         enabled on;
