shorten hls window and fragment

--- a/srs/srs.conf
+++ b/srs/srs.conf
@@ -20,8 +20,8 @@ vhost __defaultVhost__
     {
         enabled on;
         hls_path /data/root;
-        hls_fragment 10;
-        hls_window 90;
+        hls_fragment 2;
+        hls_window 6
     }
 
     dvr
