--- a/srs/srs.conf
+++ b/srs/srs.conf
@@ -21,7 +21,7 @@ vhost __defaultVhost__
         enabled on;
         hls_path /data/root;
         hls_fragment 2;
-        hls_window 6
+        hls_window 6;
     }
 
     dvr
