change to libfdk_acc and shorten hls chunks

--- a/srs/srs.conf
+++ b/srs/srs.conf
@@ -20,8 +20,8 @@ vhost __defaultVhost__
     {
         enabled on;
         hls_path /data/root;
-        hls_fragment 2;
-        hls_window 6;
+        hls_fragment 1;
+        hls_window 3;
     }
 
     dvr
@@ -56,7 +56,7 @@ vhost __defaultVhost__
             {
             }
 
-            acodec libaacplus;
+            acodec libfdk_aac;
             abitrate 70;
             asample_rate 44100;
             achannels 2;
